# BunnyGL

./: .gitignore  CMakeLists.txt  readme.md
include/BunnyGL/Core/: Application.h  Application.hpp  Log.hpp  Window.hpp
include/BunnyGL/Renderer/: Buffer.h  Buffer.hpp  BufferLayout.h  RenderCommand.h  Renderer.h  Shader.h  Shader.hpp  VertexArray.h
include/BunnyGL/Resources/: FileSystem.hpp  ResourceManager.hpp
include/BunnyGL/Scene/: PlanetScene.hpp  Scene.hpp  TriangleScene.hpp
include/BunnyGL/Utils/: Log.h
resources/shaders/: Basic.frag  Basic.vert
src/: BunnyGL.cpp  glad.c  main.cpp
src/Core/: Application.cpp  Window.cpp
src/Renderer/: Buffer.cpp  BufferLayout.cpp  RenderCommand.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp
src/Resources/: ResourceManager.cpp
src/Scene/: PlanetScene.cpp  Scene.cpp  TriangleScene.cpp
src/Utils/: Log.cpp
